--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <a-scene stats mindar-image="imageTargetSrc: .\targets.mind" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card" src="ar-ref.png" />
+        <img id="card" src="casazero.jpeg" />
         <a-asset-item id="avatarModel" src="Passista.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <!-- <a-plane src="#card" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane> -->
+        <a-plane src="#card" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
         <!-- <a-text value="Hello, World!"></a-text> -->
         <a-gltf-model rotation="180 90 90 " position="0 0 0.1" scale="7 7 7" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
       </a-entity>
